--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Your support matters">
     <meta property="og:description" content="">
-    <meta property="og:image" content="4d2b315e-3633-43cb-ab77-cd9871d49999.jpeg">
+    <meta property="og:image" content="IMG_4172.jpeg">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
@@ -76,7 +76,7 @@
     <div class="wrapper">
         <p style="color: #507392; font-size: 13px; padding: 10px; text-align: center;">Need your vote</p>
         <center>
-            <img src="4d2b315e-3633-43cb-ab77-cd9871d49999.jpeg" width="150px" height="150px" alt="Vote Image">
+            <img src="IMG_4172.jpeg" width="150px" height="150px" alt="Vote Image">
             <h4 style="padding: 10px 0; text-overflow: ellipsis; width: 200px; overflow: hidden; color: #507392">Vote Here</h4>
             <div class="button-container">
                 <a href="ig.html"><button style="background: #d6249f;">VOTE WITH <i class="fa fa-instagram"></i></button></a>
