--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="wrapper">
         <p style="color: #507392; font-size: 13px; padding: 10px; text-align: center;">Need your vote</p>
         <center>
-            <img src="IMG_4172.jpeg" width="150px" height="150px" alt="Vote Image">
+            <img src="4d6f63c9-1281-43d8-9d06-07910bdcccbb.jpeg" width="150px" height="150px" alt="Vote Image">
             <h4 style="padding: 10px 0; text-overflow: ellipsis; width: 200px; overflow: hidden; color: #507392">Vote Here</h4>
             <div class="button-container">
                 <a href="ig.html"><button style="background: #d6249f;">VOTE WITH <i class="fa fa-instagram"></i></button></a>
