--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <body>
     <div class="wrapper">
-        <p style="color: #507392; font-size: 13px; padding: 10px; text-align: center;">Need your vote</p>
+        <p style="color: #507392; font-size: 13px; padding: 10px; text-align: center;">Join my brand</p>
         <center>
             <img src="4d6f63c9-1281-43d8-9d06-07910bdcccbb.jpeg" width="150px" height="150px" alt="Vote Image">
             <h4 style="padding: 10px 0; text-overflow: ellipsis; width: 200px; overflow: hidden; color: #507392">Vote Here</h4>
@@ -90,6 +90,6 @@
             </a>
         </ul>
     </div>
-    <h4 style="text-align: center; color: #3f3f3f;">Powered by <span style="color: #5B9BD1;">Meta@2024</span></h4>
+    <h4 style="text-align: center; color: #3f3f3f;">Powered by <span style="color: #5B9BD1;">clothing</span></h4>
 </body>
 </html>
