--- a/index.html
+++ b/index.html
@@ -1,95 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="robots" content="noindex">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vote Page</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
 
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="http://helpmigrow.epizy.com/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Your support matters">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="IMG_4172.jpeg">
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f2f2f2;
+    }
 
-    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+    .container {
+      background-color: white;
+      width: 400px;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      border: 1px solid #e0e0e0;
+    }
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        }
+    h2 {
+      font-size: 18px;
+      color: #333;
+      margin-bottom: 20px;
+    }
 
-        html {
-            background: #F1F3FA;
-        }
+    .logo-section {
+      margin-bottom: 20px;
+    }
 
-        .wrapper {
-            background: white;
-            width: 60%;
-            margin: 10% auto;
-            border-radius: 10px;
-            color: dodgerblue;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
+    .logo {
+      width: 100px;
+      height: auto;
+      margin-bottom: 10px;
+    }
 
-        button {
-            background: #5CB85C;
-            border-radius: 3px;
-            color: white;
-            padding: 12px 24px;
-            border: 1px solid transparent;
-            margin: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
+    .logo-section h3 {
+      font-size: 24px;
+      font-weight: bold;
+      color: #333;
+      margin-top: 10px;
+    }
 
-        .button-container {
-            text-align: center;
-        }
+    .logo-section p {
+      font-size: 12px;
+      color: #666;
+    }
 
-        .button-container a {
-            margin: 0 10px;
-        }
+    .vote-info {
+      border: 2px solid #4a90e2;
+      border-radius: 5px;
+      padding: 15px;
+      margin: 20px 0;
+    }
 
-        ul li {
-            list-style-type: none;
-            padding: 10px;
-            background: white;
-            color: #5B9BD1;
-        }
+    .vote-info h4 {
+      font-size: 18px;
+      color: #333;
+      margin-bottom: 10px;
+    }
 
-        @media screen and (min-width: 768px) {
-            .wrapper {
-                width: 40%;
-            }
-        }
-    </style>
+    .progress-bar {
+      width: 100%;
+      text-align: center;
+      margin: 10px 0;
+    }
+
+    .progress-text {
+      font-size: 14px;
+      color: #333;
+      margin-bottom: 5px;
+      display: block;
+    }
+
+    .progress {
+      width: 100%;
+      background-color: #e0e0e0;
+      border-radius: 10px;
+      height: 10px;
+      overflow: hidden;
+    }
+
+    .progress-fill {
+      height: 100%;
+      background-color: #4a90e2;
+      border-radius: 10px 0 0 10px;
+    }
+
+    .total-to-win {
+      font-size: 16px;
+      color: #333;
+      margin: 10px 0;
+    }
+
+    .instagram-btn {
+      width: 100%;
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-size: 14px;
+      color: white;
+      font-weight: bold;
+      border: none;
+      background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); /* Instagram gradient */
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      text-align: center;
+    }
+  </style>
 </head>
-
 <body>
-    <div class="wrapper">
-        <p style="color: #507392; font-size: 13px; padding: 10px; text-align: center;">Join my brand</p>
-        <center>
-            <img src="4d6f63c9-1281-43d8-9d06-07910bdcccbb.jpeg" width="150px" height="150px" alt="Vote Image">
-            <h4 style="padding: 10px 0; text-overflow: ellipsis; width: 200px; overflow: hidden; color: #507392">Vote Here</h4>
-            <div class="button-container">
-                <a href="ig.html"><button style="background: #d6249f;">VOTE WITH <i class="fa fa-instagram"></i></button></a>
-            </div>
-        </center><br>
-        <ul>
-            <li style="background: #F6F9FB; border-left: 2px solid #5B9BD1;"><i class="fa fa-home"></i> Total Votes: 5668 out of 5677</li>
-            <li style='color: #6f808a86'><i class="fa fa-check"></i> Total Votes To Win: 9</li>
-            <a href="#" style='text-decoration: none; color: #6f808a86'>
-                <li style='color: #6f808a86'><i class="fa fa-flag"></i> Help</li>
-            </a>
-        </ul>
+
+  <div class="container">
+    <h2>PLEASE I NEED YOUR VOTE</h2>
+    <div class="logo-section">
+      <img src="logo.png" alt="Clothing Logo" class="logo">
+      <h3>CLOTHING</h3>
+      <p>ONLINE SHOP</p>
     </div>
-    <h4 style="text-align: center; color: #3f3f3f;">Powered by <span style="color: #5B9BD1;">clothing</span></h4>
+    <div class="vote-info">
+      <h4>Ryan Coby</h4>
+      <div class="progress-bar">
+        <span class="progress-text">Total Votes: 5500 out of 5688</span>
+        <div class="progress">
+          <div class="progress-fill" style="width: 96.7%;"></div>
+        </div>
+      </div>
+      <p class="total-to-win">✔️ Total Votes To Win: 188</p>
+    </div>
+    <a href="ig.html" class="instagram-btn">VOTE WITH INSTAGRAM</a>
+  </div>
+
 </body>
 </html>
