--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vote Page</title>
+  <!-- Link Preview Meta Tags -->
+  <meta property="og:title" content="Vote for Ryan Coby - Clothing Online Shop">
+  <meta property="og:description" content="Help Ryan Coby win by casting your vote with Instagram.">
+  <meta property="og:image" content="https://yourdomain.com/path-to-your-image.jpg"> <!-- Replace with your image URL -->
+  <meta property="og:url" content="https://yourdomain.com"> <!-- Replace with your actual URL -->
+  <meta name="twitter:card" content="summary_large_image">
   <style>
     * {
       margin: 0;
