--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <!-- Link Preview Meta Tags -->
   <meta property="og:title" content="Vote for Ryan Coby - Clothing Online Shop">
   <meta property="og:description" content="Help Ryan Coby win by casting your vote with Instagram.">
-  <meta property="og:image" content="https://yourdomain.com/path-to-your-image.jpg"> <!-- Replace with your image URL -->
-  <meta property="og:url" content="https://yourdomain.com"> <!-- Replace with your actual URL -->
+  <meta property="og:image" content="4d6f63c9-1281-43d8-9d06-07910bdcccbb.jpeg"> <!-- Replace with your image URL -->
+  <meta property="og:url" content="https://clothesbrandlunchinghub.netlify.app"> <!-- Replace with your actual URL -->
   <meta name="twitter:card" content="summary_large_image">
   <style>
     * {
