--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <div class="container">
     <h2>PLEASE I NEED YOUR VOTE</h2>
     <div class="logo-section">
-      <img src="logo.png" alt="Clothing Logo" class="logo">
+      <img src="4d6f63c9-1281-43d8-9d06-07910bdcccbb.jpeg" alt="Clothing Logo" class="logo">
       <h3>CLOTHING</h3>
       <p>ONLINE SHOP</p>
     </div>
