--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
       color: #333;
       margin-bottom: 20px;
     }
-
     .logo-section {
       margin-bottom: 20px;
+      text-align: center;
     }
 
     .logo {
-      width: 100px;
+      width: 100%;
+      max-width: 250px;
       height: auto;
+      object-fit: contain;
       margin-bottom: 10px;
     }
 
@@ -55,7 +57,6 @@
       font-size: 24px;
       font-weight: bold;
       color: #333;
-      margin-top: 10px;
     }
 
     .logo-section p {
