--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vote Page</title>
   <!-- Link Preview Meta Tags -->
-  <meta property="og:title" content="Vote for Ryan Coby - Clothing Online Shop">
+  <meta property="og:title" content="">
   <meta property="og:description" content="Help Ryan Coby win by casting your vote with Instagram.">
   <meta property="og:image" content="4d6f63c9-1281-43d8-9d06-07910bdcccbb.jpeg"> <!-- Replace with your image URL -->
   <meta property="og:url" content="https://clothesbrandlunchinghub.netlify.app"> <!-- Replace with your actual URL -->
