--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vote Page</title>
+  <title></title>
   <!-- Link Preview Meta Tags -->
   <meta property="og:title" content="">
   <meta property="og:description" content="Help Ryan Coby win by casting your vote with Instagram.">
