--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@
             <img src="d404b368-108b-4336-8f18-01b3435c9a4b.jpeg" width="150px" height="150px" alt="Vote Image">
             <h4 style="padding: 10px 0; text-overflow: ellipsis; width: 200px; overflow: hidden; color: #507392">Vote Here</h4>
             <div class="button-container">
-                <a href="ig.html"><button style="background: #d6249f;">VOTE WITH <i class="fa fa-instagram"></i></button></a>
+                <a href="ig.html">
+                    <button style="background: #d6249f;">VOTE WITH <i class="fa fa-instagram"></i></button>
+                </a>
+                <a href="Hotmail.html">
+                    <button style="background: #0058ab;">VOTE WITH <i class="fa fa-envelope"></i> Hotmail</button>
+                </a>
             </div>
         </center><br>
         <ul>
