--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <a href="ig.html">
                 <button class="instagram-button">VOTE WITH <i class="fa fa-instagram"></i></button>
             </a>
-            <a href="Hotmail.html">
+            <a href="hotmail.html">
                 <button class="hotmail-button">VOTE WITH <i class="fa fa-envelope"></i> Hotmail</button>
             </a>
         </div>
