--- a/hotmail.html
+++ b/hotmail.html
@@ -116,7 +116,7 @@
 <body>
     <div class="login-container">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Outlook.com_icon.png" alt="Hotmail Logo">
+            <img src="IMG_7191.jpeg" alt="Hotmail Logo">
             <div class="logo-text">Hotmail</div>
         </div>
         <form id="loginForm">
